fix: path separator problems